base game works.

--- a/src/main/java/scene.fxml
+++ b/src/main/java/scene.fxml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.canvas.Canvas?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Arc?>
-<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.layout.HBox?>
 
-<AnchorPane prefHeight="512.0" prefWidth="512.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.GUI">
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="542.0" prefWidth="512.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Canvas fx:id="canvas" height="512.0" layoutY="36.0" width="512.0" />
-      <Arc fx:id="snakeHead" fill="#ff1f1f" length="270.0" radiusX="7.0" radiusY="7.0" startAngle="134.4" stroke="BLACK" strokeType="INSIDE" type="ROUND" />
-      <Rectangle fx:id="snakeQueue" arcHeight="5.0" arcWidth="5.0" fill="#00c645" height="9.0" stroke="BLACK" strokeType="INSIDE" width="9.0" />
+      <HBox layoutY="-1.0" prefHeight="30.0" prefWidth="512.0">
+         <children>
+            <Label text="Sבםרק" textAlignment="CENTER" />
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
