--- a/src/main/resources/endGame.fxml
+++ b/src/main/resources/endGame.fxml
@@ -2,14 +2,14 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.TextField?>
 <VBox fx:id="gameEndRoot" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" spacing="10.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.EndGameController">
    <children>
       <Label fx:id="gameOverLabel" text="Game Over" />
       <Label fx:id="scoreLabel" text="0" />
-      <TextField fx:id="nameInput" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="100.0" />
+      <TextField fx:id="nameInput" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="110.0" text="Enter Name Here" />
       <Button fx:id="submitButton" mnemonicParsing="false" onAction="#submitScore" text="Submit" />
       <Button fx:id="leaderboardButton" mnemonicParsing="false" onAction="#switchToLeaderboard" text="Leaderboard" />
       <Button fx:id="resetButton" mnemonicParsing="false" onAction="#restartGame" text="Reset" />
