--- a/src/main/resources/leaderboard.fxml
+++ b/src/main/resources/leaderboard.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.geometry.Point3D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -9,15 +10,21 @@
 
 <VBox fx:id="leaderboardRoot" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" spacing="10.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LeaderboardController">
    <children>
-      <Label fx:id="leaderboardTable" alignment="TOP_CENTER" text="Leaderboard">
+      <Label fx:id="titleLabel" alignment="TOP_CENTER" text="Leaderboard">
          <padding>
             <Insets bottom="20.0" />
          </padding></Label>
-      <TableView fx:id="scoreTable" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="300.0">
+      <TableView fx:id="scoreTable" focusTraversable="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="300.0" VBox.vgrow="NEVER">
         <columns>
-          <TableColumn fx:id="nameColumn" editable="false" maxWidth="150.0" minWidth="150.0" prefWidth="150.0" sortable="false" text="NAME" />
-          <TableColumn fx:id="scoreColumn" editable="false" maxWidth="150.0" minWidth="150.0" prefWidth="150.0" sortType="DESCENDING" sortable="false" text="SCORE" />
+          <TableColumn fx:id="nameColumn" editable="false" maxWidth="-Infinity" minWidth="149.0" prefWidth="149.0" resizable="false" sortable="false" text="NAME" />
+          <TableColumn fx:id="scoreColumn" editable="false" maxWidth="-Infinity" minWidth="149.0" prefWidth="149.0" resizable="false" sortType="DESCENDING" sortable="false" text="SCORE" />
         </columns>
+         <rotationAxis>
+            <Point3D />
+         </rotationAxis>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
       <Button fx:id="clearTableButton" mnemonicParsing="false" onAction="#clearLeaderboard" text="clear leaderboard">
          <VBox.margin>
