--- a/src/main/resources/mainScene.css
+++ b/src/main/resources/mainScene.css
@@ -3,7 +3,7 @@
 }
 
 #scoreLabel {
-    -fx-font-size: 18px;
     -fx-text-fill: #3aff00;
-    -fx-font: "Courier New";
+    -fx-font-family: 'Roboto Mono', monospace;
+    -fx-font-size: 18px;
 }
