--- a/src/main/resources/endGame.fxml
+++ b/src/main/resources/endGame.fxml
@@ -8,8 +8,9 @@
 <VBox fx:id="gameEndRoot" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" spacing="10.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.EndGameController">
    <children>
       <Label fx:id="gameOverLabel" text="Game Over" />
-      <Label fx:id="scoreLabel" text="0" />
-      <TextField fx:id="nameInput" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="110.0" text="Enter Name Here" />
+      <Label fx:id="endScoreLabel" text="0" />
+      <TextField fx:id="nameInput" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="110.0" />
+      <Label fx:id="textFieldInfoLabel" text="Enter name above to save score" />
       <Button fx:id="submitButton" mnemonicParsing="false" onAction="#submitScore" text="Submit" />
       <Button fx:id="leaderboardButton" mnemonicParsing="false" onAction="#switchToLeaderboard" text="Leaderboard" />
       <Button fx:id="resetButton" mnemonicParsing="false" onAction="#restartGame" text="Reset" />
