--- a/src/main/resources/leaderboard.fxml
+++ b/src/main/resources/leaderboard.fxml
@@ -3,17 +3,19 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.geometry.Point3D?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="leaderboardRoot" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" spacing="10.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LeaderboardController">
+<VBox fx:id="leaderboardRoot" alignment="CENTER" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" spacing="10.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LeaderboardController">
    <children>
-      <Label fx:id="titleLabel" alignment="TOP_CENTER" text="Leaderboard">
-         <padding>
-            <Insets bottom="20.0" />
-         </padding></Label>
+      <ImageView fx:id="banner" fitHeight="50.0" fitWidth="346.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@assets/leaderboardBanner.png" />
+         </image>
+      </ImageView>
       <TableView fx:id="scoreTable" focusTraversable="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="300.0" VBox.vgrow="NEVER">
         <columns>
           <TableColumn fx:id="nameColumn" editable="false" maxWidth="-Infinity" minWidth="149.0" prefWidth="149.0" resizable="false" sortable="false" text="NAME" />
