changed leaderboard font;refactored dao;added sounds

--- a/src/main/resources/css/leaderboard.css
+++ b/src/main/resources/css/leaderboard.css
@@ -24,6 +24,7 @@
     -fx-alignment: center;
     -fx-background-color: black;
     -fx-text-fill: blue;
+    -fx-font-size: 14px;
     -fx-border-color: transparent;
 }
 
