--- a/src/main/resources/leaderboard.fxml
+++ b/src/main/resources/leaderboard.fxml
@@ -28,7 +28,8 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
-      <Button fx:id="clearTableButton" mnemonicParsing="false" onAction="#clearLeaderboard" text="clear leaderboard">
+      <Button fx:id="backButton" mnemonicParsing="false" onAction="#backToMenu" text="BACK" />
+      <Button fx:id="clearTableButton" mnemonicParsing="false" onAction="#clearLeaderboard" text="CLEAR">
          <VBox.margin>
             <Insets top="10.0" />
          </VBox.margin></Button>
